--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 					if (t === 'light' || t === 'dark') document.documentElement.dataset.theme = t;
 				} catch {}
 			</script>
-			<div id="app"></div>
+				<div id="app">
+					<main style="padding:1rem;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial">
+						<h1 style="font-size:1.1rem;margin:0 0 .75rem">billharris.dev</h1>
+						<p style="opacity:.8;margin:.25rem 0 1rem">Quick links</p>
+						<ul style="list-style:none;padding:0;margin:0;display:grid;gap:.5rem">
+							<li><a href="https://billharrisdev.github.io/visualizers">Visualizers</a></li>
+							<li><a href="https://billharrisdev.github.io/audio">Audio</a></li>
+							<li><a href="https://billharrisdev.github.io/browsergame">BrowserGame</a></li>
+						</ul>
+					</main>
+				</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 	<noscript>
