fix: remove inline fallback to avoid duplicate rendering; keep noscript fallback

--- a/index.html
+++ b/index.html
@@ -13,26 +13,16 @@
 					if (t === 'light' || t === 'dark') document.documentElement.dataset.theme = t;
 				} catch {}
 			</script>
-				<div id="app">
-					<main style="padding:1rem;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial">
-						<h1 style="font-size:1.1rem;margin:0 0 .75rem">billharris.dev</h1>
-						<p style="opacity:.8;margin:.25rem 0 1rem">Quick links</p>
-						<ul style="list-style:none;padding:0;margin:0;display:grid;gap:.5rem">
-							<li><a href="https://billharrisdev.github.io/visualizers">Visualizers</a></li>
-							<li><a href="https://billharrisdev.github.io/audio">Audio</a></li>
-							<li><a href="https://billharrisdev.github.io/browsergame">BrowserGame</a></li>
-						</ul>
-					</main>
-				</div>
+			<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
+		<noscript>
+			This site requires JavaScript. See links:
+			<ul>
+				<li><a href="https://billharrisdev.github.io/visualizers">Visualizers</a></li>
+				<li><a href="https://billharrisdev.github.io/audio">Audio</a></li>
+				<li><a href="https://billharrisdev.github.io/browsergame">BrowserGame</a></li>
+			</ul>
+		</noscript>
 	</body>
-	<noscript>
-		This site requires JavaScript. See links:
-		<ul>
-			<li><a href="https://billharrisdev.github.io/visualizers">Visualizers</a></li>
-			<li><a href="https://billharrisdev.github.io/audio">Audio</a></li>
-			<li><a href="https://billharrisdev.github.io/browsergame">BrowserGame</a></li>
-		</ul>
-	</noscript>
   
 </html>
